2008-02-26  Mike Kestner  <mkestner@novell.com>

	* generator/ByRefGen.cs: fix mismatched alloc/free.

2008-02-22  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom: add destroy notification and pin byte[] to
	avoid GC complications.  Add a couple new convenience ctors as
	well. [Fixes #362951]

2008-02-21  Mike Kestner  <mkestner@novell.com>

	* glib/Source.cs: rework proxy removal to avoid boxing profile.
	* glib/Idle.cs: save src_id in proxy to facilitate removal.
	* glib/Timeout.cs: save src_id in proxy to facilitate removal.
	[Fixes #359561]

2008-02-07  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: null term array marshaling.
	* glib/Marshaller.cs: new marshalers for null-terminated string 
	arrays. [Fixes #342113]

2008-02-07  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: fix off-by-1 in null term array marshaling.

2008-02-06  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata: mark ApplyEmbeddedOrientation return as owned.

2008-01-30  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs: null check ifaces in recursive method
	and signal lookup.

2008-01-29  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString (Setup): use error param name instead
	of hardcoding error.

2008-01-29  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod (CName): mangle the name.
	* generator/SymbolTable.cs (MangleName): add 'remove' and 'foreach'
	mappings.  Should probably just get a C# keyword list and map all of
	them instead of onesy twoseys.
	Fixes for tnymail binding generation.

2008-01-24  Lluis Sanchez Gual  <lluis@novell.com>
 
	* glade/XML.custom: due to a recent Mono fix (bug #322762),
	  Type.GetFields does not return private fields from base classes
	  anymore, so the BindFields now has to go through the class
	  hierarchy to get all fields.

2008-01-23  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: update version and tag 2.11.91.
