@@ -1,3 +1,15 @@
+2008-02-29  Mike Kestner  <mkestner@novell.com>
+
+	* sample/Action.cs: qualify Action usage.
+	* sample/GtkDemo/DemoApplicationWindow.cs: qualify Action usage.
+	* sample/GtkDemo/DemoUIManager.cs: qualify Action usage.
+
+2008-02-29  Mike Kestner  <mkestner@novell.com>
+
+	* configure.in.in: atk checks and SUBSTs.
+	* atk/Util.custom: custom properties for overriding class methods.
+	* atk/glue/util.c: glue to override class methods.
+
 2008-02-26  Mike Kestner  <mkestner@novell.com>
 
 	* generator/ByRefGen.cs: fix mismatched alloc/free.
